--- a/src/my-noresult-view.html
+++ b/src/my-noresult-view.html
@@ -57,7 +57,7 @@
                 }
             },
             ready: function() {
-                console.log("loading " + this.loading);
+                //console.log("loading " + this.loading);
             },
             // 0- all hidden, 1- loading, 2- no-items
             _stateChanged: function() {
