--- a/src/my-app.html
+++ b/src/my-app.html
@@ -21,8 +21,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/app-localize-behavior/app-localize-behavior.html">
 <link rel="import" href="my-icons.html">
-<link rel="import" href="./language-behavior.html">
 
 <dom-module id="my-app">
     <template>
@@ -107,7 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         Polymer({
             is: 'my-app',
             behaviors: [
-                LanguageBehavior
+                Polymer.AppLocalizeBehavior
             ],
             properties: {
                 page: {
